versioned_docs/version-2025.2.1/turma/ein/ein2024.mdx
---
slug: /turma/ein2024
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "EIN2024",
  "base": "EIN",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Sociologia 2 - 189",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Educação Física 2 - 170",
          "size": 1,
          "teachers": [
            "Kleber Augusto Michalichem",
            "Franciele Fernandes Baliero"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "EIN2024"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "Metrologia - 1550",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_metrologia_b4",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Química 2 - 187",
          "size": 2,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "EIN2024"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Processos de Fabricação 1 - 1552",
          "size": 2,
          "teachers": [
            "Luiz Inácio Chaves"
          ],
          "classroom": "laboratorio_de_usinagem_b4",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Matemática 2 - 185",
          "size": 2,
          "teachers": [
            "Jonatan Ismael Eisermann"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Lingua Estrangeira Moderna 1 - Inglês - 179",
          "size": 1,
          "teachers": [
            "Yohana Diel Saheli"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "História 2 - 178",
          "size": 1,
          "teachers": [
            "Suzane Conceição Pantolfi Tostes"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Artes 2 - 166",
          "size": 1,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "Física 2 - 175",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "laboratorio_de_fisica",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Lingua Portuguesa 2 - 183",
          "size": 2,
          "teachers": [
            "Kátia Cristiane Kobus Novaes"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Cálculo Mecânico - 154",
          "size": 2,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Biologia 2 - 168",
          "size": 1,
          "teachers": [
            "Eliana Peliçon Pereira Figueira"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Filosofia 2 - 173",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Geografia 2 - 177",
          "size": 1,
          "teachers": [
            "Alexandre Roberto Valcarenghi"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Sistemas Digitais - 1553",
          "size": 2,
          "teachers": [
            "Juliano da Rocha Queiroz"
          ],
          "classroom": "laboratorio_de_eletricidade_e_eletronica_b4",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Eletrônica - 1554",
          "size": 3,
          "teachers": [
            "Juliano da Rocha Queiroz"
          ],
          "classroom": "laboratorio_de_eletricidade_e_eletronica_b4",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# EIN2024

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
