versioned_docs/version-2025.2.5/turma/ein/ein2024.mdx
---
slug: /turma/ein2024
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "EIN2024",
  "base": "EIN",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Sociologia 3 - 212",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Sociologia 2 - 189",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Lingua Estrangeira Moderna 2 - Ingles - 208",
          "size": 1,
          "teachers": [
            "Kátia Cristiane Kobus Novaes"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "Educação Física 2 - 170",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "EIN2024"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "Segurança do Trabalho - 197",
          "size": 1,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Metrologia - 1550",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_metrologia_b4",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Elementos de Automação - 198",
          "size": 2,
          "teachers": [
            "Jair Fajardo Junior"
          ],
          "classroom": "laboratorio_de_automacao_e_robotica_industrial",
          "students": [
            "EIN2024"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Química 2 - 187",
          "size": 2,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "EIN2024"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Biologia 3 - 202",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Processos de Fabricação 1 - 1552",
          "size": 2,
          "teachers": [
            "Luiz Inácio Chaves"
          ],
          "classroom": "laboratorio_de_usinagem_b4",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Matemática 3 - 210",
          "size": 2,
          "teachers": [
            "Jonatan Ismael Eisermann"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Matemática 2 - 185",
          "size": 2,
          "teachers": [
            "Jonatan Ismael Eisermann"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Filosofia 3 - 204",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Lingua Estrangeira Moderna 1 - Inglês - 179",
          "size": 1,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Lingua Portuguesa 3 - 209",
          "size": 2,
          "teachers": [
            "Kátia Cristiane Kobus Novaes"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "História 2 - 178",
          "size": 1,
          "teachers": [
            "Suzane Conceição Pantolfi Tostes"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Artes 2 - 166",
          "size": 1,
          "teachers": [
            "Simone de Miranda"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "História 3 - 207",
          "size": 1,
          "teachers": [
            "Suzane Conceição Pantolfi Tostes"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Física 2 - 175",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "laboratorio_de_fisica",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Física 3 - 205",
          "size": 2,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "laboratorio_de_fisica",
          "students": [
            "EIN2024"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Lingua Portuguesa 2 - 183",
          "size": 2,
          "teachers": [
            "Kátia Cristiane Kobus Novaes"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Educação Física 3 - 203",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Cálculo Mecânico - 154",
          "size": 2,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Geografia 3 - 206",
          "size": 1,
          "teachers": [
            "Alexandre Roberto Valcarenghi"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "Máquinas e Acionamentos - 1575",
          "size": 3,
          "teachers": [
            "Wylliam Salviano Gongora"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Geografia 2 - 177",
          "size": 1,
          "teachers": [
            "Alexandre Roberto Valcarenghi"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Filosofia 2 - 173",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Biologia 2 - 168",
          "size": 1,
          "teachers": [
            "Eliana Peliçon Pereira Figueira"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "EIN2024"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Processos de Fabricação 2 - 1573",
          "size": 2,
          "teachers": [
            "Luiz Inácio Chaves"
          ],
          "classroom": "laboratorio_de_usinagem_b4",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Sistemas Digitais - 1553",
          "size": 2,
          "teachers": [
            "Juliano da Rocha Queiroz"
          ],
          "classroom": "laboratorio_de_eletricidade_e_eletronica_b4",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Química 3 - 211",
          "size": 1,
          "teachers": [
            "Antonio Cesar Godoy"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Eletrônica - 1554",
          "size": 3,
          "teachers": [
            "Juliano da Rocha Queiroz"
          ],
          "classroom": "laboratorio_de_eletricidade_e_eletronica_b4",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Projetos e Instalações Elétricas - 200",
          "size": 2,
          "teachers": [
            "Alex Miyamoto Mussi"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "EIN2024"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# EIN2024

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
